# stable-typeid

./: Cargo.toml  LICENSE  README.md
src/: lib.rs
stable-typeid-macro/: Cargo.toml
stable-typeid-macro/src/: lib.rs  util.rs
