[workspace]
members = ["stable-typeid-macro"]
[package]
name = "stable-typeid"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
quote = "1.0.35"
syn = "2.0.48"
stable-typeid-macro = { path = "./stable-typeid-macro" }
