[workspace]
members = ["stable-typeid-macro"]
[package]
name = "stable-typeid"
version = "0.0.1"
edition = "2021"
description = "Generate a stable type identifier for rust structs and enums"
license-file = "LICENSE"
authors = ["BERADQ <adqber123@outlook.com>"]
repository = "https://github.com/BERADQ/stable-typeid" 
[dependencies]
stable-typeid-macro = { path = "./stable-typeid-macro" }
