[package]
name = "stable-typeid-macro"
version = "0.0.1"
edition = "2021"
license = "MIT"
description = "stable typeid macro"
authors = ["BERADQ <adqber123@outlook.com>"]
repository = "https://github.com/BERADQ/stable-typeid" 
[dependencies]
proc-macro2 = "1.0.76"
quote = "1.0.35"
syn = {version="2.0.48",features=["parsing"]}

[lib]
proc-macro = true
